unpackaged/main/default/objects/Idea_Email_Notification__c/Idea_Email_Notification__c.object-meta.xml
<CustomObject>
    <label>Idea Email Notification</label>
    <nameField>
        <displayFormat>IEN-{000000}</displayFormat>
        <label>Idea Email Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Email Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>