unpackaged/main/default/objects/Idea_Email_Notification__c/fields/Idea_Number__c.field-meta.xml
<CustomField>
    <fullName>Idea_Number__c</fullName>
    <formula>Idea__r.Idea_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idea Number</label>
    <type>Text</type>
</CustomField>