unpackaged/main/default/objects/Idea_Email_Notification__c/fields/Idea_Status__c.field-meta.xml
<CustomField>
    <fullName>Idea_Status__c</fullName>
    <formula>TEXT(Idea__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idea Status</label>
    <type>Text</type>
</CustomField>