unpackaged/main/default/objects/Idea_Email_Notification__c/fields/Idea_Title__c.field-meta.xml
<CustomField>
    <fullName>Idea_Title__c</fullName>
    <formula>Idea__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idea Title</label>
    <type>Text</type>
</CustomField>