unpackaged/main/default/objects/Idea_Email_Notification__c/fields/Idea_URL__c.field-meta.xml
<CustomField>
    <fullName>Idea_URL__c</fullName>
    <formula>Case(User__r.UserType, &quot;Standard&quot;, $Setup.T1_Control_Settings__c.Internal_URL__c &amp; &quot;/lightning/cmp/acideas__brIdeaDetails?acideas__recordId=&quot; &amp; Idea__r.Id, 
&quot;PowerPartner&quot;, $Setup.T1_Control_Settings__c.Employee_Community_URL__c &amp; &quot;/s/idea/&quot; &amp; Idea__r.Id,
&quot;CspLitePortal&quot;, $Setup.T1_Control_Settings__c.Customer_Community_URL__c &amp; &quot;/s/idea/&quot; &amp; Idea__r.Id, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Idea URL</label>
    <type>Text</type>
</CustomField>